# lcov_demo

./: CMakeLists.txt  README.md  build_and_lcov.sh
src/: main.cc
